Prefer larger Width value if more than one is given for each glyph.

Fixes bug #692267